vendorController fix